# augean

./: .coverage  .gitignore  README.md  db_credentials.template.json  deployment.template.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml
augean/: config.py  db.py  errors.py  loader.py  main.py  parser.py  transformer.py  validator.py
configs/: haemonc_uranus_v0.json  haemonc_uranus_v1.json  rd_dias_v1.json  template.json
docs/: architecture.md  compliance.md  config-guide.md  testing.md
hestia/: config.py  db.py  errors.py  loader.py  main.py  validator.py
hestia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: generate_release_artefacts.sh  regenerate_golden.py
tests/: conftest.py  test_acceptance.py  test_config.py  test_db.py  test_loader.py  test_main.py  test_parser.py  test_transformer.py  test_validator.py
tests/test_data/configs/: test_rd_dias.json
tests/test_data/golden/: 999999999-99999K9999-99NGSH999-9999-M-99999999.csv
tests/test_data/workbooks/haemonc/: 999999999-99999K9999-99NGSH999-9999-M-99999999.xlsx  haemonc.xlsx
tests/test_data/workbooks/rd_dias/: 148888811-45664R057-66NGWTY2-9116-M-111118.xlsx  14888888811-45664R057-66NGWTY2-9116-M-111118.xlsx  cuh.xlsx  nuh.xlsx
