[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia"
version = "0.1.0"
description = "Config-driven Excel workbook staging extractor for ClinVar submissions"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "freezegun"]

[project.scripts]
hestia = "hestia.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hestia*"]
