[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "augean"
version = "0.1.0"
description = "Config-driven Excel workbook staging extractor for ClinVar submissions"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "pytest-xdist", "freezegun", "bandit>=1.7", "pip-audit>=2.7", "pip-tools>=7.4", "cyclonedx-bom>=4"]

[project.scripts]
augean = "augean.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["augean*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "-n auto -m 'not acceptance'"
markers = [
    "acceptance: end-to-end acceptance tests requiring a live database (deselected by default)",
]
